# pbrt-v4

./: .gitattributes  .gitignore  .gitmodules  0001-MSVC-HIP.patch  CMakeLists.txt  LICENSE.txt  NOTES.md  README.md  THIRD_PARTY.md  batch_render_nvdb.py  compare-skipmip.bat  compare-skipmip.ps1  compare_ssim.py  convert_vdb_to_nvdb.py  withshadow.cpp
src/ext/: CMakeLists.txt
src/ext/flip/: flip.cpp  flip.h
src/ext/glad/: CMakeLists.txt
src/ext/glad/include/glad/: glad.h
src/ext/glad/src/: glad.c
src/ext/gtest/: gtest-all.cc  gtest.h  gtest_main.cc
src/ext/instant-ngp/: CMakeLists.txt
src/ext/instant-ngp/dependencies/OpenXR-SDK/: .appveyor.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  CHANGELOG.SDK.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
src/ext/instant-ngp/dependencies/OpenXR-SDK/.azure-pipelines/: openxr-sdk.yml
src/ext/instant-ngp/dependencies/OpenXR-SDK/.azure-pipelines/nuget/: stage_nuget.ps1
src/ext/instant-ngp/dependencies/OpenXR-SDK/.azure-pipelines/shared/: build_jobs.yml  build_linux.yml  build_mingw.yml  build_msvc.yml  check_clang_format.yml  check_file_format.yml  codespell.yml  generate_windows_matrix_build.py  install_vulkan.ps1  organize_windows_artifacts.py  print_windows_artifact_names.py  shared.py
src/ext/instant-ngp/dependencies/OpenXR-SDK/.github/: .java-version.license  pull_request_template.md
src/ext/instant-ngp/dependencies/OpenXR-SDK/.github/scripts/: CMakePresets.json.license  generate_windows_matrix_build.py  install_vulkan.ps1  organize_windows_artifacts.py  shared.py
src/ext/instant-ngp/dependencies/OpenXR-SDK/.github/workflows/: android.yml  check_clang_format_and_codespell.yml  msvc-build-preset.yml  windows-matrix.yml
src/ext/instant-ngp/dependencies/OpenXR-SDK/.reuse/: dep5
src/ext/instant-ngp/dependencies/OpenXR-SDK/LICENSES/: Apache-2.0.txt  LicenseRef-Khronos-Free-Use-License-for-Software-and-Documentation.txt  LicenseRef-KhronosSpecCopyright-WithNormativeWording-v10.txt  LicenseRef-jsoncpp-public-domain.txt
src/ext/instant-ngp/dependencies/OpenXR-SDK/include/: CMakeLists.txt  generated_header_list.txt  generated_header_list.txt.license
src/ext/instant-ngp/dependencies/OpenXR-SDK/include/openxr/: CMakeLists.txt
src/ext/instant-ngp/dependencies/OpenXR-SDK/specification/registry/: xr.xml
src/ext/instant-ngp/dependencies/OpenXR-SDK/src/: .clang-format  CMakeLists.txt  common_config.h.in  version.cmake  xr_generated_dispatch_table.c  xr_generated_dispatch_table.h
src/ext/instant-ngp/dependencies/OpenXR-SDK/src/cmake/: FindEGL.cmake  FindJsonCpp.cmake  FindMetalTools.cmake  FindOpenGLES.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  StdFilesystemFlags.cmake  cmake_uninstall.cmake.in  fxc_shader.cmake  glsl_shader.cmake  make_includable.cmake  metaconfig.cmake.in  metaconfig_android.cmake.in  presentation.cmake
src/ext/instant-ngp/dependencies/OpenXR-SDK/src/loader/: .gitignore  AndroidManifest.xml.in  CMakeLists.txt  OpenXRConfig.cmake.in  abi.json  additional_manifest.mf.in  additional_manifest.mf.in.license  loader.rc  module.json  openxr-loader.def  openxr-loader.expsym  openxr-loader.map  openxr.pc.in  openxr_loader_for_android.pom  prefab.json  prefab.json.license  settings.gradle
src/ext/instant-ngp/dependencies/args/: .buckconfig  .gitignore  .gitlab-ci.yml  .travis.yml  .ycm_extra_conf.py  BUCK  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  appveyor.yml  args.hxx  conanfile.py  meson.build  meson_options.txt  test.cxx
src/ext/instant-ngp/dependencies/args/examples/: BUCK  bash_completion.sh  completion.cxx  gitlike.cxx
src/ext/instant-ngp/dependencies/args/test/: BUCK  multiple_inclusion_1.cxx  multiple_inclusion_2.cxx  windows_h.cxx
src/ext/instant-ngp/dependencies/dlss/: .gitmodules  LICENSE.txt  README.md
src/ext/instant-ngp/dependencies/dlss/NVIDIAImageScaling/: .gitignore  README.md  licence.txt  third_party_licenses.txt
src/ext/instant-ngp/dependencies/dlss/NVIDIAImageScaling/NIS/: NIS_Config.h  NIS_Main.glsl  NIS_Main.hlsl  NIS_Scaler.h
src/ext/instant-ngp/dependencies/dlss/NVIDIAImageScaling/samples/: CMakeLists.txt
src/ext/instant-ngp/dependencies/dlss/include/: nvsdk_ngx.h  nvsdk_ngx_defs.h  nvsdk_ngx_helpers.h  nvsdk_ngx_helpers_vk.h  nvsdk_ngx_params.h  nvsdk_ngx_vk.h
src/ext/instant-ngp/dependencies/dlss/utils/: DLSS_Debug_Jitter_Configs.txt  ngx_driver_onscreenindicator.reg  ngx_driver_onscreenindicator_off.reg  ngx_log_off.reg  ngx_log_on.reg  ngx_log_verbose.reg  ngx_log_window_off.reg  ngx_log_window_on.reg
src/ext/instant-ngp/dependencies/glfw/: .gitignore  CMakeLists.txt
src/ext/instant-ngp/dependencies/glfw/docs/: window.dox
src/ext/instant-ngp/dependencies/glfw/src/: CMakeLists.txt  cocoa_init.m  cocoa_platform.h  context.c  glx_context.c  glx_context.h  internal.h  wgl_context.c  wgl_context.h  window.c
src/ext/instant-ngp/dependencies/tiny-cuda-nn/: CMakeLists.txt
src/ext/instant-ngp/dependencies/tinylogger/: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  log-demo.cpp
src/ext/instant-ngp/dependencies/tinylogger/tinylogger/: tinylogger.h
src/ext/instant-ngp/dependencies/zlib/: CMakeLists.txt
src/ext/instant-ngp/dependencies/zstr/: .gitignore  .travis.yml  CMakeLists.txt  README.org
src/ext/instant-ngp/dependencies/zstr/examples/: .gitignore  Makefile  test-strict_fstream.cpp  zc.cpp  zpipe.cpp  ztxtpipe.cpp
src/ext/instant-ngp/dependencies/zstr/src/: zstr.hpp
src/ext/instant-ngp/include/neural-graphics-primitives/: nerf_device.cuh  testbed.h
src/ext/instant-ngp/include/neural-graphics-primitives/fused_kernels/: train_nerf.cuh
src/ext/instant-ngp/src/: nerf_loader.cu  testbed_nerf.cu
src/ext/rply/: rply.cpp  rply.h
src/nn/: CMakeLists.txt  main_nn.cu
src/pbrt/cmd/: CMakeLists.txt  cyhair2pbrt.cpp  imgtool.cpp  nanovdb2pbrt.cpp  nvdb_to_vdb.cpp  obj2pbrt.cpp  pbrt.cpp  pbrt_test.cpp  pbrtqtgui.cpp  plytool.cpp  pspec.cpp  pspec_gpu.cpp  rgb2spec_opt.cpp  soac.cpp  splitply.cpp  vdb_to_nvdb.cpp
(+336 files in other folders)
